# ElementaryAudius

./: .gitignore  LICENSE.md  README.md  meson.build
data/: com.github.ElementaryAudius.appdata.xml.in  com.github.ElementaryAudius.desktop.in  meson.build
po/extra/: POTFILES
src/: Application.vala  StreamPlayer.vala  Structures.vala  meson.build
